[workspace]
resolver = "2"
members = [
    "day_one",
    "day_two",
    "day_three",
    "day_four",
    "day_five",
    "day_six",
    "day_seven",
    "day_eight",
    "day_nine",
    "day_ten",
    "day_eleven",
    "day_twelve",
    "day_thirteen",
    "day_fourteen",
    "day_15",
    "day_16",
    "day_17",
    "day_18",
]
